Fix spacing errors

--- a/css/master.css
+++ b/css/master.css
@@ -8,13 +8,13 @@
   width: 100%;
 }
 .logo1 img {
-  margin-left: 40.8%;
+  margin-left: 41.8%;
   top: 20%;
   position: absolute;
 }
 .bannerText {
   top: 60%;
-  margin-left: 36.7%;
+  margin-left: 37.7%;
   position: absolute;
   text-align: center;
   color: white;
